<resources>
    <string name="app_name">intery</string>
    <string name="prefs_file">com.albaburdallo.intery.PREFERENCE_FILE_KEY</string>
    <string name="or">or</string>
    <string name="save">Save</string>
    <string name="delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register"><b>Register here</b></string>
    <string name="noAcc">Don\'t have an account yet?</string>
    <string name="logIn">Log in</string>
    <string name="logInGoogle">Log in with Google</string>
    <string name="logInEmail">Email</string>
    <string name="logInPassword">Password</string>
    <string name="signIn">Sign in</string>
    <string name="logOut"><b><i>Log out</i></b></string>
    <string name="createAcc"><b>New account</b></string>
    <string name="name"><b>Name</b></string>
    <string name="surname"><b>Surname</b></string>
    <string name="email"><b>Email</b></string>
    <string name="password"><b>Password</b></string>
    <string name="repeat_password"><b>Repeat password</b></string>
    <string name="termsAndConditions">You must accept the terms and conditions</string>
    <string name="hello">¡Hi, </string>
    <string name="noTasks"><i>No tasks</i></string>
    <string name="create_task">New task</string>
    <string name="addTask"><b>New task</b></string>
    <string name="taskName">Title (Ex: Dinner with mom)</string>
    <string name="taskStart">Start</string>
    <string name="taskEnd">End</string>
    <string name="taskDate">Date</string>
    <string name="taskTime">Time</string>
    <string name="taskAllDay">All day</string>
    <string name="taskRemindMe">Remind me</string>
    <string name="taskNotes">Notes</string>
    <string name="taskDateValidation">Start date must be prior to the end date</string>
    <string name="accept">Accept</string>
    <string name="userError">Something went wrong while authenticating the user</string>
    <string name="tasksOption"><b><i>Tasks</i></b></string>
    <string name="walletOption"><b><i>Wallet</i></b></string>
    <string name="habitOption"><b><i>Habits</i></b></string>
    <string name="settingsOption"><b><i>Settings</i></b></string>
    <string name="myCalendars"><b>My calendars</b></string>
    <string name="noCalendars">No calendars</string>
    <string name="create_calendar">New calendar</string>
    <string name="create_calendar_title"><b><i>New calendar</i></b></string>
    <string name="calendarTitle">Title (Ex: Work)</string>
    <string name="cancel">Cancel</string>
    <string name="calendarDescription">Description (Ex: Task for working)</string>
    <string name="calendarColor">Color</string>
    <string name="remainingTasks">tasks remaining</string>
    <string name="calendarValidation">You must select a calendar</string>
    <string name="select">-- Select --</string>
    <string name="selectEntity">Select an entity</string>
    <string name="selectSection">Select a section</string>
    <string name="deleteCalendar">Deleting the calendar will delete all of its tasks, do you want to continue?</string>
    <string name="seeMore"><i>See more...</i></string>
    <string name="noTasksForToday"><i>No tasks for today</i></string>
    <string name="addTransaction">Add transaction</string>
    <string name="all">All</string>
    <string name="expenditures">Expenditures</string>
    <string name="incomes">Incomes</string>
    <string name="noTransactions">No transactions</string>
    <string name="cantDeleteCalendar">Cannot delete this calendar</string>
    <string name="defaultCalendar">Default calendar</string>
    <string name="exisitingCalendar">This calendar already exists</string>
    <string name="nothing_here">Nothing here…</string>
    <string name="newTransaction"><b><i>New transaction</i></b></string>
    <string name="expenditure">Expenditure</string>
    <string name="income">Income</string>
    <string name="transactionQuantity">Quantity (Ex: 16.50)</string>
    <string name="transactionConcept">Concept (Ex: Clothes)</string>
    <string name="transactionDate">Date</string>
    <string name="transactionNotes">Notes</string>
    <string name="addEntity">Add entity</string>
    <string name="addSection">Add section</string>
    <string name="entityExists">This entity already exists</string>
    <string name="sectionExists">This section already exists</string>
    <string name="createEntity"><b><i>Create entity</i></b></string>
    <string name="createSection"><b><i>Create section</i></b></string>
    <string name="validateEntity">You must select an entity</string>
    <string name="validateSection">You must select a section</string>
    <string name="totalSavings">This month you have saved: </string>
    <string name="totalNoSavings">This month you have spent: </string>
    <string name="totalSpent">Total spent</string>
    <string name="totalReceived">Total received</string>
    <string name="totalZero">Total money cannot be less than 0</string>
    <string name="fiveMinutes">5 minutes before</string>
    <string name="halfHour">30 minutes before</string>
    <string name="oneHour">1 hour before</string>
    <string name="atTheMoment">At the moment</string>
    <string name="oneDay">1 day before</string>
    <string name="inFiveMinutes">In 5 minutes</string>
    <string name="inThrirtyMinutes">In 30 minutes</string>
    <string name="inOneHour">In 1 hour</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="snooze">Snooze</string>
    <string name="done">Done</string>
    <string name="editProfile">Edit profile</string>
    <string name="changePassword">Change password</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="repeatNewPassword">Repeat new password</string>
    <string name="passUpdated">Password updated</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="resetEmail">An email was sent to restart your password</string>
    <string name="oldPassNotValid">Your old password is not correct</string>
    <string name="fileError">An error ocurred uploading the file</string>
    <string name="upload">Upload</string>
    <string name="cantEditEmail">The email cannot be edited</string>
    <string name="myHabits">My habits</string>
    <string name="noHabits">No habits</string>
    <string name="newHabit">New habit</string>
    <string name="started">Started:</string>
    <string name="habitName">Title (Ex: Go running)</string>
    <string name="habitReminder">Reminder</string>
    <string name="habitNotes">Notes</string>
    <string name="habitColor">Color:</string>
    <string name="goal">Goal:</string>
    <string name="habitRemind">Time of reminder</string>
    <string name="everyDay">Every day</string>
    <string name="twoAWeek">Two days in a week</string>
    <string name="oneAWeek">One day in a week</string>
    <string name="oneAMonth">One day in a month</string>
    <string name="twoAMonth">Two days in a month</string>
    <string name="threeWeek">Three days in a week</string>
    <string name="threeMonth">Three days in a month</string>
    <string name="habitDateValidator">End date must be later than today</string>
    <string name="editHabit">Edit habit</string>
    <string name="editTask">Edit task</string>
    <string name="editTransaction">Edit transaction</string>
    <string name="exisitingHabit">This habit already exists</string>
    <string name="habitNotificationBody">Have you completed your habit yet?</string>
    <string name="populateTaskName1">Dinner with mom</string>
    <string name="populateTaskDesc1">Restaurant</string>
    <string name="populateTaskName2">Maria\'s birthday</string>
    <string name="populateSection1">Subscriptions</string>
    <string name="populateTransactionName">Maria\'s birthday groceries</string>
    <string name="populateEntityName">Target</string>
    <string name="populateSection2">Groceries</string>
    <string name="populateEntity3">Anna</string>
    <string name="populateTransactionName2">Bizum for dinner</string>
    <string name="populateHabitName">Meditate</string>
    <string name="settings">Settings</string>
    <string name="settingsLanguage">Language</string>
    <string name="settingsCurrency">Currency</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="serviceConditions">Service conditions</string>
    <string name="legalNotice">Legal notice</string>
    <string name="privacySettings">Privacy settings</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="nonEmptyValidation">Can\'t be empty</string>
    <string name="equalToValidation">Passwords must match</string>
    <string name="loginError">An error has occurred. Please check your email and password</string>
    <string name="alertError">An error occurred while registering the user</string>
    <string name="entityName">Name (Ex: SheIn)</string>
    <string name="sectionName">Name (Ex: Shopping)</string>
    <string name="donePopup">DONE</string>
    <string name="terminos_y_condiciones">Terms and conditions</string>
    <string name="acepto_los">I accept the</string>
</resources>