<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task.CalendarActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_calendar_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/calendarNameEditText"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_input"
            android:maxLength="10"
            android:hint="@string/calendarTitle" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/calendarColor" />

            <ImageView
                android:id="@+id/calendarColorPoint2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_circle"
                app:tint="#FF9AA2" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/calendarDescriptionEditText"
            style="@style/textarea"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/ic_input"
            android:hint="@string/calendarDescription" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>